# resend-mcp

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml  update-spec.yml
scripts/: transform_spec.py
src/: main.rs
src/specs/: resend.yaml
