[package]
name = "resend-mcp"
version = "0.2.0"
edition = "2024"
description = "MCP server for the Resend email API"
license = "Apache-2.0"
repository = "https://github.com/psu3d0/resend-mcp"
homepage = "https://github.com/psu3d0/resend-mcp"
readme = "README.md"
keywords = ["mcp", "resend", "email", "api", "llm"]
categories = ["network-programming", "email"]

[dependencies]
rmcp-openapi = "0.20.7"
rmcp = { version = "0.10.0", default-features = false, features = ["server", "base64", "macros", "transport-streamable-http-server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "net"] }
hyper-util = { version = "0", features = ["server", "tokio", "service"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
